--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>website portfolio</title>
+        <link rel="stylesheet" href="beansonbread/style.css">
+        <link rel="icon" href="https://www.pngarts.com/files/16/Dumpling-Vector-PNG-HQ-Pic.png" type="image/x-icon">
+    </head>
     <body>
         <h1> hii</h1>
         <p> this is a test</p>
